Fix paginate alignment

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -94,6 +94,13 @@ footer ul li {
   }
 }
 
+/* paginate */
+
+.paginate {
+  display: flex;
+  justify-content: center;
+}
+
 /* miscellaneous */
 
 .debug_dump {
